--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -28,16 +28,13 @@
     <div class="row">
         <div class="col-sm-2" style="margin-top: 15px;padding:0;">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
-                   aria-controls="v-pills-home" aria-selected="true">Admin</a>
-                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
-                   aria-controls="v-pills-profile" aria-selected="false">User</a>
-            </div>
+                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">User</a>
+                         </div>
         </div>
         <div class="col-sm-10" style="background-color: #F7F7F7; height:100vh;">
-            <div class="tab-content" id="v-pills-tabContent" style="margin-top: 15px; ">
-                <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
-                     style="margin-left: 2%; margin-right: 2%">
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                     <h1>Admin panel</h1>
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
@@ -269,10 +266,9 @@
 
                 </div>
 
-            </div>
+<!--            </div>-->
             <!--        НОВОЕ!!! Юзер как есть табличка-->
-            <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"
-                 style="margin-left: 2%; margin-right: 2%">
+                <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                 <h1>User information-page</h1>
                 <div class="card">
                     <div class="card-header">
@@ -306,7 +302,7 @@
                 </div>
             </div>
 
-
+    </div>
         </div>
     </div>
 </div>
