--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -36,7 +36,7 @@
             <div class="tab-content" id="v-pills-tabContent">
                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                     <h1>Admin panel</h1>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs" id="myTab">
                         <li class="nav-item">
                             <a class="nav-link active" data-toggle="tab" href="#home" role="tab"> All users</a>
                         </li>
